# fastflows

./: .cookiecutter.json  .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CONTRIBUTING.md  Makefile  README.md  dev-env-sample.env  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docker/: .env  Dockerfile  README.md  docker-compose.yml  minio.yml
docker/kube-infra/: fastflows.yaml  ingress.yaml  postgres.yaml  prefect-queue.yaml  prefect.yaml  secrets.yaml
docs/: deploy-flows.md  flows.md  index.md  installation.md  providers.md  quick-start.md
docs/stylesheets/: extra.css
examples/: fastapi_app.py  flow_minio.py
fastflows/: __init__.py  cli.py  config.py  errors.py  logging.py  main.py  middleware.py
fastflows/cli/: flow_runs.py  flows.py  main.py  task_runs.py  utils.py
fastflows/config/: app.py  auth.py  logging.py
fastflows/core/: blocks.py  deployment.py  flow.py  flow_run.py  storage.py  task_run.py
fastflows/core/catalog/: __init__.py  cache.py  catalog.py  reader.py  storage.py
fastflows/core/utils/: parse_data.py  singleton.py
fastflows/providers/: __init__.py  base.py  prefect.py  utils.py
fastflows/routers/: __init__.py  flow_runs.py  flows.py  task_runs.py  utils.py
fastflows/schemas/: deployment.py  flow.py  flow_data.py  flow_run.py  misc.py
fastflows/schemas/prefect/: block.py  deployment.py  flow.py  flow_data.py  flow_run.py  misc.py  task_run.py
fastflows/utils/: __init__.py  core.py
tests/: conftest.py
tests/api_tests/flows/: conftest.py  test_flow_run.py  test_flows_deployment.py
tests/integration/cli/: conftest.py  test_flow_runs.py  test_flows_cli.py
tests/test_data/flows/: flow_with_params.py  simple_flow.py  with_subflow.py
tests/test_data/wrong_flows/: flow_with_wrong_format_params.py
tests/unit/: test_cli_utils.py  test_config.py  test_models.py  test_reader.py
