[tool.poetry]
name = "fastflows"
version = "0.1.2"
description = "FastFlows is a FastAPI server & command line tool to comunicate with Prefect 2.0 as a Workflow manager (and in future other systems like Pygeoapi, for example) to deploy, run, track flows and more."
authors = ["Francesco Bartoli <francesco.bartoli@geobeyond.it>", "Iuliia Volkova <xnuinside@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/geobeyond/fastflows"
repository = "https://github.com/geobeyond/fastflows"
documentation = "https://github.com/geobeyond/fastflows"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.dependencies]
python = "^3.8"
typer = ">=0.6.1,<0.8.0"
httpx = "^0.23.0"
loguru = "^0.6.0"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
mangum = "^0.15.0"
fastapi-opa = "^1.3.7"
uvicorn = ">=0.17.6,<0.20.0"
rich = "^12.4.4"
python-slugify = "^6.1.2"
fsspec = "^2022.7.1"
s3fs = "^2022.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^5.0.4"
black = "^22.8.0"
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
pre-commit = "^2.20.0"
mkdocs-material = "^8.5.7"

[tool.poetry.scripts]
fastflows = "fastflows.cli.main:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
