[tool.poetry]
name = "fastflows"
version = "0.1.2"
description = "FastFlows is a FastAPI server & command line tool to comunicate with Prefect 2.0 as a Workflow manager (and in future other systems like Pygeoapi, for example) to deploy, run, track flows and more."
authors = ["Francesco Bartoli <francesco.bartoli@geobeyond.it>", "Iuliia Volkova <xnuinside@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/geobeyond/fastflows"
repository = "https://github.com/geobeyond/fastflows"
documentation = "https://github.com/geobeyond/fastflows"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.dependencies]
python = "^3.8"
typer = ">=0.6.1,<0.7.0"
httpx = "^0.23.0"
loguru = "^0.6.0"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
mangum = ">=0.15,<0.18"
fastapi-opa = "^1.3.7"
uvicorn = ">=0.17.6,<0.21.0"
rich = "^12.4.4"
python-slugify = ">=6.1.2,<8.0.0"
fsspec = "^2022.7.1"
s3fs = "^2022.7.1"
prefect = {version = "^2.7.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^5.0.4"
black = "^22.12.0"
nox = "^2022.11.21"
nox-poetry = "^1.0.1"
pre-commit = "^3.0.3"
mkdocs-material = "^8.5.11"

[tool.poetry.extras]
prefect = ["prefect"]

[tool.poetry.scripts]
fastflows = "fastflows.cli.main:app"

[tool.poetry.group.dev.dependencies]
safety = "^2.3.3"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.12.6"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.2"

[tool.poetry.group.interactive-dev]
optional = true

[tool.poetry.group.interactive-dev.dependencies]
ipython = "^8.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
